feat(SpeechSynthesis): add new module

--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
         "@angular/platform-browser-dynamic": "^7.2.15",
         "@angular/platform-server": "^7.2.15",
         "@angular/router": "^7.2.15",
-        "@ng-web-apis/common": "^1.1.0",
+        "@ng-web-apis/common": "^1.8.1",
         "@nguniversal/common": "^7.1.1",
         "@nguniversal/express-engine": "^7.1.1",
         "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+        "@taiga-ui/cdk": "latest",
         "core-js": "^2.5.4",
         "rxjs": "^6.5.2",
         "tslib": "^1.10.0",
