--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "prettier": "^2.2.1",
         "standard-version": "^9.0.0",
         "ts-node": "^9.1.1",
+        "tsickle": "^0.38.1",
         "tslint": "~5.15.0",
         "tsutils": "^3.17.1",
         "typescript": "~3.8.3"
